# mlx-dspark

./: .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.md  benchmark.py  pyproject.toml
.github/workflows/: ci.yml
scratch/: chat.html  docker-compose-db.yml
scripts/: serve_gemma.sh  smoke_install.sh
src/mlx_dspark/: __init__.py  __main__.py  batch_engine.py  calibrate.py  cli.py  config.py  dflash_model.py  generate.py  load.py  lookup.py  model.py  prefix_cache.py  sampling.py  server.py  target.py  tools.py
tests/: conftest.py  test_batch_engine.py  test_calibrate.py  test_formats.py  test_generate_helpers.py  test_import_compat.py  test_lookup.py  test_model.py  test_penalties.py  test_prefix_cache.py  test_resolve.py  test_server.py  test_tools.py
