[project]
name = "mlx-dspark"
version = "0.0.3"
description = "DSpark + DFlash speculative decoding (semi-autoregressive / block-diffusion drafting) for Apple Silicon via MLX"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "erahim3", email = "erahim3@gmail.com" }]
keywords = ["mlx", "apple-silicon", "speculative-decoding", "dspark", "dflash", "deepspec", "z-lab", "llm-inference"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: MacOS",
    "Environment :: GPU",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mlx>=0.31.2",
    "mlx-lm>=0.31.3",
    # mlx-vlm gives us Gemma-4 + the existing EAGLE3/DFlash spec-decode reference impl
    "mlx-vlm>=0.6.3",
    "numpy",
    "huggingface-hub",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.urls]
Homepage = "https://github.com/ARahim3/mlx-dspark"
Repository = "https://github.com/ARahim3/mlx-dspark"
Issues = "https://github.com/ARahim3/mlx-dspark/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mlx_dspark"]

[tool.ruff]
line-length = 100
